@@ -10,6 +10,7 @@ OpenLDAP 2.4.18 Engineering
 	Added slapd tcp buffers support (ITS#6234)
 	Fixed slapd allow mirrormode to be set to FALSE (ITS#5946)
 	Fixed slapd certificate list parsing (ITS#6241)
+	Fixed slapd writers blocking (ITS#6276)
 	Fixed slapd dncachesize behavior to unlimited by default (ITS#6222)
 	Fixed slapd incorrectly applying writetimeout when not set (ITS#6220)
 	Fixed slapd with duplicate empty lines for olcDbConfig (ITS#6240)
